fix(gantt): improve gantt size by setting align to k-icon

--- a/packages/default/scss/common/_icons.scss
+++ b/packages/default/scss/common/_icons.scss
@@ -24,6 +24,7 @@
         text-transform: none;
         text-decoration: none;
         display: inline-block;
+        vertical-align: middle;
 
         &::before {
             vertical-align: baseline;
